--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,51 @@
-.icon {
-  width: 64px;
-  vertical-align: top;
-  border: 1px solid salmon;
+body {
+  margin: 0;
+  overflow: hidden;
+  height: 100svh;
+  background-image: linear-gradient(to bottom right, lightblue, lightgreen);
+}
+
+h1 {
+  top: 50%;
+  left: 50%;
+  color: black;
+  font-family: Arial, sans-serif;
+  font-style: italic;
+  font-size: 2vw;
+  max-height: 5svh;
+  padding: 10px 0 10px 1ch;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-bottom: 5px solid rgb(12, 12, 12);
+  background-color: whitesmoke;
+}
+
+#main-canvas {
+  width: 100%;
+  max-width: 93svh;
+  aspect-ratio: 1;
+  display: block;
+  background-color: white;
+  box-shadow: inset 2px 2px 1px 1px gray, inset -2px -2px 1px 1px gray;
+  align-self: center;
+}
+
+.main-window-container {
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+  column-gap: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 93svh;
+  background-color: lightgray;
+  max-width: fit-content;
+  box-shadow: 3px 3px 6px 6px rgba(128, 128, 128, 0.377);
+}
+
+.sidebar {
+  width: 100%;
+  height: 100%;
+  max-width: 200px;
+  min-width: 100px;
+  background-color: whitesmoke;
 }
