--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ h1 {
 
 #main-canvas {
   width: 100%;
-  max-width: 93svh;
+  max-width: 92svh;
   aspect-ratio: 1;
   display: block;
   background-color: white;
@@ -36,7 +36,7 @@ h1 {
   column-gap: 0px;
   margin-left: auto;
   margin-right: auto;
-  max-height: 93svh;
+  max-height: 92svh;
   background-color: lightgray;
   max-width: fit-content;
   box-shadow: 3px 3px 6px 6px rgba(128, 128, 128, 0.377);
@@ -46,6 +46,29 @@ h1 {
   width: 100%;
   height: 100%;
   max-width: 200px;
-  min-width: 100px;
+  min-width: 25px;
   background-color: whitesmoke;
+}
+
+.sidebar button {
+  width: 80%;
+  aspect-ratio: 1;
+  font-size: 3vw;
+  margin: 10px;
+  padding: 5px;
+}
+.sidebar:first-of-type {
+  border-right: 2px solid gray;
+}
+
+.sidebar:last-of-type {
+  border-left: 2px solid gray;
+}
+
+#left-toolbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  padding-top: 10px;
 }
