--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,10 @@ h1 {
 }
 
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
   width: 100%;
   height: 100%;
   max-width: 200px;
@@ -56,6 +60,11 @@ h1 {
   font-size: 3vw;
   margin: 10px;
   padding: 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .sidebar:first-of-type {
   border-right: 2px solid gray;
@@ -65,9 +74,16 @@ h1 {
   border-left: 2px solid gray;
 }
 
-#left-toolbar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 10px;
+.active-tool {
+  border-image: conic-gradient(
+    from 0deg at 50% 50%,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    violet,
+    red
+  ) 1;
 }
