--- a/src/style.css
+++ b/src/style.css
@@ -130,6 +130,7 @@ h1 {
   width: 100%;
   font-size: 1vw;
   aspect-ratio: 1;
+  object-fit: contain;
   height: auto;
   border: 1px solid gray;
   border-radius: 5px;
