--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,10 @@ h1 {
   font-size: 0.9rem;
 }
 
+.sticker-display div {
+  position: relative;
+}
+
 .sticker-option {
   width: 100%;
   font-size: 1vw;
@@ -136,22 +140,41 @@ h1 {
   background-color: transparent;
   cursor: pointer;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
 
-.sticker-option button {
-  position: relative;
-  width: 10px;
-  height: 10px;
-  top: 5px;
-  left: 5px;
+.sticker-display div button {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  font-size: 0.75rem;
   background-color: transparent;
   border: none;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  transition: transform 0.3s ease;
+  -webkit-transition: transform 0.3s ease;
+  -moz-transition: transform 0.3s ease;
+  -ms-transition: transform 0.3s ease;
+  -o-transition: transform 0.3s ease;
+}
+
+.sticker-display div button:hover {
+  box-shadow: none;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+
+.sticker-display button {
+  aspect-ratio: 1;
 }
 
 .sticker-display button:hover {
